# condominium

./: .gitignore  Makefile  README.md  pyproject.toml
condominium/adapters/: orm.py  repository.py
condominium/domain/: __init__.py  exceptions.py  service_layer.py  value_object.py
condominium/domain/models/: constants.py  spreadsheet.py  unity.py
src/: constants.py  entities.py  repositories.py  use_cases.py
src/building/domain/: entity.py  exceptions.py  service_layer.py  value_object.py
src/building/domain/models/: spreadsheet.py  unity.py
src/domain/: __init__.py  _types.py  entities.py  value_objects.py
src/domain/building/: entity.py  value_object.py
tests/: conftest.py  test_orm.py
tests/factories/: expenses_factory.py  unity_factory.py
tests/test_domain/: test_unity.py
tests/test_domain/test_building/test_entity/: test_base_unity.py  test_payable_expenses.py  test_unity.py
tests/test_domain/test_building/test_models/: test_base_unity.py  test_payable_expenses.py  test_spreadsheet.py  test_unity.py
tests/unit_tests/test_entities/: test_unity.py
tests/unit_tests/test_types/: test_check_unity_type.py  test_possible_values.py
tests/unit_tests/test_value_objects/: test_string_identity.py
