[tool.poetry]
name = "condominium"
version = "0.1.0"
description = ""
authors = ["frnsimoes <simoes.grcia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 90

[tool.black]
line-length = 90
