[tool.poetry]
name = "condominium"
version = "0.1.0"
description = ""
authors = ["frnsimoes <simoes.grcia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.11"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest-mock = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.9"
mypy = "^0.961"
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
